--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <!-- Link to your compiled CSS file -->
     <link rel="stylesheet" href="main.css">
     <!-- Inter font from Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="root"></div> <!-- React app will mount here -->
 
     <!-- Link to your compiled JavaScript file -->
+    <!-- It's best practice to place script tags that interact with the DOM
+         just before the closing </body> tag to ensure HTML is fully parsed. -->
     <script src="main.js"></script>
 </body>
 </html>
